--- a/index.css
+++ b/index.css
@@ -20,8 +20,8 @@ dd {
 }
 
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
-ul[role="list"],
-ol[role="list"] {
+ul,
+ol {
     list-style: none;
 }
 
@@ -116,4 +116,129 @@ body {
     line-height: 1.5;
     font-size: 16px;
     font-family: 'Rubik', sans-serif;
+    display: flex;
+    align-items: center;
+}
+
+main {
+    padding: 1rem;
+    height: 100%;
+}
+
+/* outside texts */
+
+section.container .texts {
+    text-align: center;
+}
+
+section.container h1 {
+    font-size: 2rem;
+    color: var(--very-dark-desaturated-violet);
+    margin-bottom: 1rem;
+    font-weight: 500;
+}
+
+section.container p {
+    color: var(--dark-grayish-violet);
+    font-size: 0.9rem;
+}
+
+/* Phone */
+
+.phone {
+    height: 500px;
+    width: 90%;
+    margin-inline: auto;
+    padding: .5rem;
+    background-color: var(--white);
+    border-radius: 2rem;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    margin-bottom: 2rem;
+}
+
+.phone .inner {
+    background: var(--light-grayish-violet);
+    width: 100%;
+    height: 100%;
+}
+
+.inner .top {
+    background: linear-gradient(to right, var(--light-violet), var(--light-magenta));
+    width: 100%;
+    height: 5rem;
+    border-radius: 2rem 2rem 6px 6px;
+    padding: 0 1rem;
+    display: flex;
+    align-items: end;
+    position: relative;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+.inner .top .inner-top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+
+/* Top left */
+.inner .top .top-left {
+    display: flex;
+    align-items: center;
+    gap: .5rem;
+    margin-bottom: 1rem;
+}
+
+.inner .top .top-left img{
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    border: 1px solid var(--white);
+}
+
+.inner .top .top-left .name h3 {
+    color: var(--light-grayish-violet);
+    font-size: .9rem;
+    font-weight: 500;
+    line-height: 10px;
+    margin-bottom: .2rem;
+}
+
+.inner .top .top-left .name p {
+    color: var(--grayish-blue);
+    font-size: 0.7rem;
+}
+
+/* Top right */
+
+.top .top-right {
+    margin-bottom: 1rem;
+}
+
+.top .top-right ul {
+    display: flex;
+    flex-direction: column;
+    gap: .2rem;
+    margin: 0;
+}
+
+.top .top-right ul li {
+    list-style: none;
+    width: 3px;
+    height: 3px;
+    border-radius: 50%;
+    background-color: var(--light-grayish-violet);
+}
+
+/* Notch */
+
+.top .notch {
+    width: 10rem;
+    height: 20px;
+    background-color: var(--light-grayish-violet);
+    position: absolute;
+    top: 0px;
+    left: 50%;
+    transform: translateX(-50%);
+    border-radius: 0 0 2rem 2rem;
 }
