--- a/index.css
+++ b/index.css
@@ -149,7 +149,7 @@ section.container p {
 /* Phone */
 
 .phone {
-    height: 500px;
+    height: 634px;
     width: 90%;
     margin-inline: auto;
     padding: .5rem;
@@ -163,6 +163,7 @@ section.container p {
     background: var(--light-grayish-violet);
     width: 100%;
     height: 100%;
+    border-radius: 2rem;
 }
 
 .inner .top {
@@ -289,4 +290,91 @@ section.container p {
     width: 40px;
     height: 40px;
     border-radius: 10px;
+}
+
+/* options section */
+
+.options {
+    margin-top: 1.2rem;
+    display: grid;
+    gap: 1rem;
+    max-width: 80%;
+}
+
+.options .option {
+    background: linear-gradient(to right, var(--light-magenta), var(--light-violet));
+    width: 100%;
+    border-radius: 10px 10px 10px 5px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: .5rem 1rem .5rem .5rem;
+}
+
+.options .option .time {
+    display: flex;
+    gap: .5rem;
+    align-items: center;
+}
+
+.options .option .time p {
+    color: var(--white);
+    font-size: 12px;
+}
+
+.options .option .price{
+    color: var(--white);
+    font-size: 16px;
+    font-weight: 700;
+}
+
+.options .option .time .radio {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    border: 1.8px solid var(--very-light-magenta);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.input-container {
+    background-color: var(--white);
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    margin-top: 1.6rem;
+    border-radius: 30px;
+    align-items: center;
+    padding-right: .5rem;
+}
+
+.input-container input {
+    width: 100%;
+    padding: 0rem 0rem 0 1rem;
+    height: 3rem;
+    border-radius: 30px 10px 10px 30px;
+    border: none;
+    outline: none;
+    font-size: 12px;
+    font-weight: 500;
+    color: var(--dark-grayish-violet);
+}
+
+.input-container input::placeholder {
+    color: var(--grayish-blue);
+}
+
+.input-container button {
+    background-color: var(--very-dark-desaturated-violet);
+    border: none;
+    outline: none;
+    border-radius: 50%;
+    color: var(--white);
+    font-size: 18px;
+    font-weight: 700;
+    font-weight: 500;
+    cursor: pointer;
+    width: 30px;
+    height: 30px;
 }
